e2e works without cd
Also more portable to JVM 11