@@ -5,6 +5,10 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+readonly SCRIPT_PATH="$(cd "$(dirname "${BASH_SOURCE[0]}")" >/dev/null && pwd)"
+readonly PROJECT_PATH="$(cd "$(dirname "${BASH_SOURCE[0]}")/.." >/dev/null && pwd)"
+readonly RESULTS_FILE="$SCRIPT_PATH/bench_dbeam_results.out"
+
 # This file contatins psql views with complex types to validate and troubleshoot dbeam
 
 PSQL_USER=postgres
@@ -20,7 +24,7 @@ startPostgres() {
   # https://stackoverflow.com/questions/35069027/docker-wait-for-postgresql-to-be-running
   docker run -it --rm --link dbeam-postgres:postgres -e PGPASSWORD=mysecretpassword postgres:10.7 timeout 45s bash -ic 'until psql -h postgres -U postgres dbeam_test -c "select 1"; do sleep 1; done; echo "psql up and running.."'
   sleep 3
-  cat ./ddl.sql \
+  cat "$SCRIPT_PATH/ddl.sql" \
     | docker run -i --rm --link dbeam-postgres:postgres -e PGPASSWORD=mysecretpassword postgres:10 psql -h postgres -U postgres dbeam_test
   echo '\d' | docker run -i --rm --link dbeam-postgres:postgres -e PGPASSWORD=mysecretpassword postgres:10 psql -h postgres -U postgres dbeam_test
 }
@@ -32,6 +36,16 @@ dockerClean() {
 #"-XX:+PrintGCApplicationStoppedTime"
 #-agentpath:/Applications/VisualVM.app/Contents/profiler/lib/deployed/jdk16/mac/libprofilerinterface.jnilib=/Applications/VisualVM.app/Contents/profiler/lib,5141
 export JAVA_OPTS="
+-XX:+UseParallelGC
+-Xmx1g
+-Xms1g
+"
+
+JVM11_OPTS="
+-Xlog:gc*:verbose_gc.log:time
+"
+
+JVM8_OPTS="
 -XX:+DisableExplicitGC
 -XX:+PrintGCDetails
 -XX:+PrintGCApplicationStoppedTime
@@ -41,18 +55,15 @@ export JAVA_OPTS="
 -XX:+UseGCLogFileRotation
 -XX:NumberOfGCLogFiles=5
 -XX:GCLogFileSize=2000k
--XX:+UseParallelGC
--Xmx1g
--Xms1g
 "
 
 pack() {
   # create a fat jar
-  (cd ..; mvn clean package -Ppack -DskipTests -Dmaven.test.skip=true -Dmaven.site.skip=true -Dmaven.javadoc.skip=true)
+  (cd "$PROJECT_PATH"; mvn package -Ppack -DskipTests -Dmaven.test.skip=true -Dmaven.site.skip=true -Dmaven.javadoc.skip=true)
 }
 
 runFromJar() {
-  (set -ex; java $JAVA_OPTS -cp ../dbeam-core/target/dbeam-core-shaded.jar com.spotify.dbeam.jobs.JdbcAvroJob "$@")
+  (set -ex; java $JAVA_OPTS -cp "$PROJECT_PATH"/dbeam-core/target/dbeam-core-shaded.jar com.spotify.dbeam.jobs.JdbcAvroJob "$@")
 }
 
 runDbeamDefault() {
@@ -71,7 +82,7 @@ DOCKER_PSQL_ARGS=(
 )
 
 runDBeamDockerCon() {
-  OUTPUT="./results/testn/$(date +%FT%H%M%S)/"
+  OUTPUT="$SCRIPT_PATH/results/testn/$(date +%FT%H%M%S)/"
   runDbeamDefault \
     "${DOCKER_PSQL_ARGS[@]}" \
     "--partition=$(date +%F)" \
@@ -82,12 +93,13 @@ runDBeamDockerCon() {
 runScenario() {
   for ((i=1;i<=3;i++)); do
     runDBeamDockerCon "${@:2}"
-    jq -r "[\"$1\", .recordCount, .writeElapsedMs, .msPerMillionRows, .bytesWritten?, (.bytesWritten? / .writeElapsedMs | . * 1000 | floor | . / 1000)] | @tsv" < "$OUTPUT/_METRICS.json" >> ./bench_dbeam_results
+    jq -r "[\"$1\", .recordCount, .writeElapsedMs, .msPerMillionRows, .bytesWritten?, (.bytesWritten? / .writeElapsedMs | . * 1000 | floor | . / 1000)] | @tsv" < "$OUTPUT/_METRICS.json" >> "$RESULTS_FILE"
   done
 }
 
 runSuite() {
-  printf 'scenario\t\trecords\twriteElapsedMs\tmsPerMillionRows\tbytesWritten\tkBps\n' >> ./bench_dbeam_results
+  java -version
+  printf 'scenario\t\trecords\twriteElapsedMs\tmsPerMillionRows\tbytesWritten\tkBps\n' >> "$RESULTS_FILE"
   table=demo_table
   BINARY_TRANSFER='false' runScenario "deflate1t5" --avroCodec=deflate1
   BINARY_TRANSFER='false' runScenario "||query" --avroCodec=deflate1 --queryParallelism=5 --splitColumn=row_number
@@ -95,7 +107,7 @@ runSuite() {
 
 light() {
   pack
-  printf 'scenario\t\trecords\twriteElapsedMs\tmsPerMillionRows\tbytesWritten\n' >> ./bench_dbeam_results
+  printf 'scenario\t\trecords\twriteElapsedMs\tmsPerMillionRows\tbytesWritten\n' >> "$RESULTS_FILE"
   table=demo_table
   BINARY_TRANSFER='false' runScenario "deflate1t5" --avroCodec=deflate1
   printResults
@@ -103,7 +115,7 @@ light() {
 
 
 printResults() {
-  column -t -s $'\t' < ./bench_dbeam_results | tail -n 20
+  column -t -s $'\t' < "$RESULTS_FILE" | tail -n 20
 }
 
 main() {
